# diy-robocars

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
data/: Dockerfile.template  index.js  package-lock.json  package.json
driver/: Dockerfile  app.py  requirements.txt  start.sh
frontend-vuejs/: Dockerfile  Dockerfile.dev  README.md  consume.js  package.json  vue.config.js
frontend-vuejs/public/: index.html
frontend-vuejs/src/: App.vue
frontend-vuejs/src/components/: RabbitMQConsumer.vue
frontend/static/js/: main.js
i2c/: Dockerfile  helpers.py  simple_steering.py  start.sh  test_steering.py
i2c/tests/: test_helpers.py
pca9685/: Dockerfile  app.py  helpers.py  requirements.txt  simple_steering.py  start.sh
pca9685/tests/: test_helpers.py
reverse-proxy/: Dockerfile
reverse-proxy/etc/: nginx.conf
reverse-proxy/etc/conf.d/: app.location  app.upstream  (+6 more)
ros/: Dockerfile
ros-joy/: Dockerfile  start.sh
ros-master/: Dockerfile
ros-pca9685/: Dockerfile  start.sh
ros-pca9685/src/ros-pwm-msgs/: CMakeLists.txt  README.md  package.xml
ros-pca9685/src/ros-pwm-msgs/msg/: DutyCycle.msg  DutyCyclePercent.msg  DutyCycleValue.msg  MultiPinDutyCycle.msg  SinglePinDutyCycle.msg
ros-pca9685/src/ros-pwm-msgs/srv/: SetDutyCycle.srv  SetMultiPinDutyCycle.srv  SetSinglePinDutyCycle.srv
ros-tutorials/: Dockerfile
timelapse/: Dockerfile  app.py  start.sh
uart/: Dockerfile  main.js  start.sh
uart-node/: main.js
uart-python/: Dockerfile  app.py  helpers.py  requirements.txt  start.sh
uart-python/tests/: test_helpers.py
(+1 files in other folders)
