<?xml version="1.0"?>
<package format="2">
  <name>pwm_msgs</name>
  <version>1.0.0</version>
  <description>pwm-msgs</description>

  <author email="github@cocasema.com">cocasema</author>
  <maintainer email="github@cocasema.com">cocasema</maintainer>
  <license>MIT</license>

  <url type="github">https://github.com/cocasema/ros-pwm-msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>